# Spotify-Auto-Liker

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
